fix: fix fab button z-index

--- a/app/_styles/navbar.css
+++ b/app/_styles/navbar.css
@@ -27,7 +27,7 @@
 }
 
 .nav-fab {
-    @apply relative flex justify-center;
+    @apply relative flex justify-center z-fixed;
 }
 
 .nav-fab .fab-button {
